--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Research Project</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
@@ -48,13 +48,13 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Authors</a>
+              <a class="nav-link" href="authors.html">Authors</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Background</a>
+              <a class="nav-link" href="background.html">Background</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Procedure</a>
+              <a class="nav-link" href="procedure.html">Procedure</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Results</a>
@@ -68,7 +68,7 @@
     </nav>
     
 
-      <div class="container mt-5 mb-5" style="max-width: 65rem;">
+      <div class="container mt-5 mb-4" style="max-width: 65rem;">
         <h1 class="text-center">Searching for Dark Photon Production Using
           Genetic Algorithms</h1>
         <h5 class="text-center">Rohan Arni, High Technology High School</h5>
@@ -102,8 +102,6 @@
               NewU1 --> NewBoson["$$\gamma'$$ (Dark photon)"]
 
               SM --> Fermions["Fermions"]
-              Fermions --> Quarks["Quarks"]
-              Fermions --> Leptons["Leptons"]
 
               SM --> Higgs["Higgs Boson"]
 
