--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand px-2" href="#">
+        <a class="navbar-brand px-2" href="index.html">
           <img src="images/atom-svgrepo-com.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"> Searching for Dark Photon Production
         </a>
         <button
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home
+              <a class="nav-link active" href="index.html">Home
                 <!--<span class="visually-hidden">(current)</span> -->
               </a>
             </li>
