--- a/authors.html
+++ b/authors.html
@@ -68,7 +68,7 @@
         </nav>
 
         <div class="mx-auto" style="margin-top: 50px">
-            <div class="card about mx-auto" style="max-width: 40rem">
+            <div class="card about mx-auto fade-in slide-in-less" style="max-width: 40rem">
                 <img src="images/RohanArni_Headshot.jpeg"
                     class="card-img-top mx-auto mt-3 mb-2"
                     style="border-radius: 20px; height: auto; width:30rem" alt>
