--- a/background.html
+++ b/background.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Authors</title>
+        <title>Background</title>
         <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" href="styles/bootstrap.css" />
         <!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
@@ -70,15 +70,15 @@
             </div>
         </nav>
 
-        <div class="d-flex mb-0"
-            style="min-height: 20vh; padding: 5px; margin-top: 50px">
-            <div class="card border-primary mx-auto" style="max-width: 55rem;">
+        <div class="d-flex mb-3"
+            style="min-height: 20vh; padding: 5px; margin-top: 50px;">
+            <div class="card border-primary mx-auto slide-in-less fade-in" style="max-width: 55rem;">
                 <div class="card-header"> <h3
                         style="text-align :center">Background</h2></div>
                 <div class="card-body align-items:center">
                     <p class="card-text" style="text-align: center">
 
-                        <h4 style="text-align:center">Introduction</h4>
+                        <h4 class = "" style="text-align:center">Introduction</h4>
                         <ul>
 
                             <li>Dark matter makes up 27% of the energy density
