--- a/procedure.html
+++ b/procedure.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Authors</title>
+        <title>Procedure</title>
         <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" href="styles/bootstrap.css" />
         <!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
@@ -32,7 +32,7 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand px-2" href="/">
+                <a class="navbar-brand px-2" href="index.html">
                     <img src="images/atom-svgrepo-com.svg" alt width="30"
                         height="24" class="d-inline-block align-text-top">
                     Searching for Dark Photon Production
@@ -47,7 +47,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Home
+                            <a class="nav-link" href="index.html">Home
                                 <!--<span class="visually-hidden">(current)</span> -->
                             </a>
                         </li>
@@ -74,7 +74,7 @@
 
         <div class="d-flex mb-0"
             style="min-height: 20vh; padding: 5px; margin-top: 50px">
-            <div class="card border-primary mx-auto" style="width: 55rem;">
+            <div class="card border-primary mx-auto fade-in slide-in-less" style="width: 55rem;">
 
                 <div class="card-header"> <h3
                         style="text-align :center">Procedure</h2></div>
