--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
     
 
-      <div class="container mt-5 mb-4" style="max-width: 65rem;">
+      <div class="container mt-5 mb-4 slide-in fade-in" style="max-width: 65rem;">
         <h1 class="text-center">Searching for Dark Photon Production Using
           Genetic Algorithms</h1>
         <h5 class="text-center">Rohan Arni, High Technology High School</h5>
@@ -76,7 +76,7 @@
       </div>
 
       <div class="d-flex mb-0" style="min-height: 20vh; padding: 5px;">
-        <div class="card border-primary mx-auto" style="max-width: 55rem;">
+        <div class="card border-primary mx-auto slide-in-less fade-in" style="max-width: 55rem;">
           <div class="card-header"> <h3
               style="text-align :center">Abstract</h2></div>
           <div class="card-body align-items:center">
