--- a/about.html
+++ b/about.html
@@ -45,16 +45,21 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home
+                                <!--<span class="visually-hidden">(current)</span> -->
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Authors</a>
+                            <a class="nav-link active"
+                                href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="background.html">Background</a>
+                            <a class="nav-link"
+                                href="background.html">Background</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="procedure.html">Procedure</a>
+                            <a class="nav-link"
+                                href="procedure.html">Procedure</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Results</a>
@@ -68,10 +73,11 @@
         </nav>
 
         <div class="mx-auto" style="margin-top: 50px">
-            <div class="card about mx-auto fade-in slide-in-less" style="max-width: 40rem">
+            <div class="card about mx-auto fade-in slide-in-less"
+                style="max-width: 30rem">
                 <img src="images/RohanArni_Headshot.jpeg"
                     class="card-img-top mx-auto mt-3 mb-2"
-                    style="border-radius: 20px; height: auto; width:30rem" alt>
+                    style="border-radius: 20px; height: auto; width:20rem" alt>
                 <div class="card-body">
                     <h3 class="card-title
                 ">Rohan Arni</h4>
@@ -84,6 +90,21 @@
                     </p>
                 </div>
             </div>
+        </div>
+
+        <div class="container">
+            <footer
+                class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <p class="col-md-4 mb-0 text-body-secondary">&copy; Rohan Arni
+                    2024</p>
+
+                <!-- Back to Top Button -->
+                <a href="#" id="back-to-top" class="btn btn-primary">
+
+                    <i class="bi bi-arrow-up-circle icon-white"></i>
+                    Back to Top</a>
+
+            </footer>
         </div>
 
     </body>
