--- a/procedure.html
+++ b/procedure.html
@@ -27,54 +27,60 @@
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
       </script>
 
-      <script src="https://kit.fontawesome.com/81dbb0d303.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/81dbb0d303.js"
+            crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-            <div class="container-fluid">
-                <a class="navbar-brand px-2" href="index.html">
-                    <img src="images/atom-svgrepo-com.svg" alt width="30"
-                        height="24" class="d-inline-block align-text-top">
-                    Searching for Dark Photon Production
-                </a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarColor01">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarColor01">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home
-                                <!--<span class="visually-hidden">(current)</span> -->
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="authors.html">Authors</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link"
-                                href="background.html">Background</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Procedure</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Results</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Conclusion</a>
-                        </li>
-                    </ul>
+        <div class="navbar-container">
+            <nav class="navbar navbar-expand-lg bg-primary"
+                data-bs-theme="dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand px-2" href="index.html">
+                        <img src="images/atom-svgrepo-com.svg" alt width="30"
+                            height="24" class="d-inline-block align-text-top">
+                        Searching for Dark Photon Production
+                    </a>
+                    <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarColor01">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarColor01">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Home
+                                    <!--<span class="visually-hidden">(current)</span> -->
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link"
+                                    href="background.html">Background</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active"
+                                    href="procedure.html">Procedure</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Results</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Conclusion</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
 
         <div class="d-flex mb-0"
             style="min-height: 20vh; padding: 5px; margin-top: 50px">
-            <div class="card border-primary mx-auto fade-in slide-in-less" style="width: 55rem;">
+            <div class="card border-primary mx-auto fade-in slide-in-less"
+                style="width: 55rem;">
 
                 <div class="card-header"> <h3
                         style="text-align :center">Procedure</h2></div>
@@ -89,17 +95,19 @@
                                     <th><h5>Icon</h5></th>
                                 </tr>
                             </thead>
-                        
+
                             <tbody class="table-group-divider">
                                 <tr class="align-middle">
                                     <th scope="row" class="table-secondary">
                                         <h4>1</h4>
                                     </th>
                                     <td>
-                                        <p class="howTo">Simulate dark photon production data with Pythia8.3</p>
+                                        <p class="howTo">Simulate dark photon
+                                            production data with Pythia8.3</p>
                                     </td>
-                                    <td class="table-secondary" style="text-align:center">
-                                        <i class="fa fa-burst fa-2x"></i> 
+                                    <td class="table-secondary"
+                                        style="text-align:center">
+                                        <i class="fa fa-burst fa-2x"></i>
                                     </td>
                                 </tr>
                                 <tr class="align-middle">
@@ -107,10 +115,12 @@
                                         <h4>2</h4>
                                     </th>
                                     <td>
-                                        <p class="howTo">Import dataset into Pandas DataFrame</p>
+                                        <p class="howTo">Import dataset into
+                                            Pandas DataFrame</p>
                                     </td>
-                                    <td class="table-secondary" style="text-align:center">
-                                        <i class="fa fa-file-import fa-2x"></i> 
+                                    <td class="table-secondary"
+                                        style="text-align:center">
+                                        <i class="fa fa-file-import fa-2x"></i>
                                     </td>
                                 </tr>
                                 <tr class="align-middle">
@@ -118,10 +128,13 @@
                                         <h4>3</h4>
                                     </th>
                                     <td>
-                                        <p class="howTo">Create random initial population of AdaBoost algorithms</p>
+                                        <p class="howTo">Create random initial
+                                            population of AdaBoost
+                                            algorithms</p>
                                     </td>
-                                    <td class="table-secondary" style="text-align:center">
-                                        <i class="fa fa-dice fa-2x"></i> 
+                                    <td class="table-secondary"
+                                        style="text-align:center">
+                                        <i class="fa fa-dice fa-2x"></i>
                                     </td>
                                 </tr>
                                 <tr class="align-middle">
@@ -129,10 +142,14 @@
                                         <h4>4</h4>
                                     </th>
                                     <td>
-                                        <p class="howTo">Define fitness function to evaluate each solution for accuracy</p>
+                                        <p class="howTo">Define fitness function
+                                            to evaluate each solution for
+                                            accuracy</p>
                                     </td>
-                                    <td class="table-secondary" style="text-align:center">
-                                        <i class="fa fa-person-running fa-2x"></i> 
+                                    <td class="table-secondary"
+                                        style="text-align:center">
+                                        <i
+                                            class="fa fa-person-running fa-2x"></i>
                                     </td>
                                 </tr>
                                 <tr class="align-middle">
@@ -140,10 +157,13 @@
                                         <h4>5</h4>
                                     </th>
                                     <td>
-                                        <p class="howTo">Define mutation/selection function using DEAP</p>
+                                        <p class="howTo">Define
+                                            mutation/selection function using
+                                            DEAP</p>
                                     </td>
-                                    <td class="table-secondary" style="text-align:center">
-                                        <i class="fa fa-vial fa-2x"></i> 
+                                    <td class="table-secondary"
+                                        style="text-align:center">
+                                        <i class="fa fa-vial fa-2x"></i>
                                     </td>
                                 </tr>
                                 <tr class="align-middle">
@@ -151,10 +171,14 @@
                                         <h4>6</h4>
                                     </th>
                                     <td>
-                                        <p class="howTo">Set genetic algorithm parameters: Population size 50, Crossover probability 0.5, Mutation probability 0.2</p>
+                                        <p class="howTo">Set genetic algorithm
+                                            parameters: Population size 50,
+                                            Crossover probability 0.5, Mutation
+                                            probability 0.2</p>
                                     </td>
-                                    <td class="table-secondary" style="text-align:center">
-                                        <i class="fa fa-gear fa-2x"></i> 
+                                    <td class="table-secondary"
+                                        style="text-align:center">
+                                        <i class="fa fa-gear fa-2x"></i>
                                     </td>
                                 </tr>
                                 <tr class="align-middle">
@@ -162,10 +186,12 @@
                                         <h4>7</h4>
                                     </th>
                                     <td>
-                                        <p class="howTo">Run genetic algorithm for 10 generations</p>
+                                        <p class="howTo">Run genetic algorithm
+                                            for 10 generations</p>
                                     </td>
-                                    <td class="table-secondary" style="text-align:center">
-                                        <i class="fa fa-dna fa-2x"></i> 
+                                    <td class="table-secondary"
+                                        style="text-align:center">
+                                        <i class="fa fa-dna fa-2x"></i>
                                     </td>
                                 </tr>
                                 <tr class="align-middle">
@@ -173,18 +199,35 @@
                                         <h4>8</h4>
                                     </th>
                                     <td>
-                                        <p class="howTo">Run best AdaBoost algorithm and analyze results</p>
+                                        <p class="howTo">Run best AdaBoost
+                                            algorithm and analyze results</p>
                                     </td>
-                                    <td class="table-secondary" style="text-align:center">
-                                        <i class="fa fa-play fa-2x"></i> 
+                                    <td class="table-secondary"
+                                        style="text-align:center">
+                                        <i class="fa fa-play fa-2x"></i>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
-                        
+
                     </div>
                 </section>
             </div>
+        </div>
+
+        <div class="container">
+            <footer
+                class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <p class="col-md-4 mb-0 text-body-secondary">&copy; Rohan Arni
+                    2024</p>
+
+                <!-- Back to Top Button -->
+                <a href="#" id="back-to-top" class="btn btn-primary">
+
+                    <i class="bi bi-arrow-up-circle icon-white"></i>
+                    Back to Top</a>
+
+            </footer>
         </div>
 
     </body>
