--- a/background.html
+++ b/background.html
@@ -50,14 +50,15 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="authors.html">Authors</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active"
                                 href="background.html">Background</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="procedure.html">Procedure</a>
+                            <a class="nav-link"
+                                href="procedure.html">Procedure</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Results</a>
@@ -72,13 +73,14 @@
 
         <div class="d-flex mb-3"
             style="min-height: 20vh; padding: 5px; margin-top: 50px;">
-            <div class="card border-primary mx-auto slide-in-less fade-in" style="max-width: 55rem;">
+            <div class="card border-primary mx-auto slide-in-less fade-in"
+                style="max-width: 55rem;">
                 <div class="card-header"> <h3
                         style="text-align :center">Background</h2></div>
                 <div class="card-body align-items:center">
                     <p class="card-text" style="text-align: center">
 
-                        <h4 class = "" style="text-align:center">Introduction</h4>
+                        <h4 class style="text-align:center">Introduction</h4>
                         <ul>
 
                             <li>Dark matter makes up 27% of the energy density
@@ -238,6 +240,21 @@
                 </div>
 
             </div>
+        </div>
+
+        <div class="container">
+            <footer
+                class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <p class="col-md-4 mb-0 text-body-secondary">&copy; Rohan Arni
+                    2024</p>
+
+                <!-- Back to Top Button -->
+                <a href="#" id="back-to-top" class="btn btn-primary">
+
+                    <i class="bi bi-arrow-up-circle icon-white"></i>
+                    Back to Top</a>
+
+            </footer>
         </div>
 
     </body>
