adding padding and spacing

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
             </div>
         </nav>
 
-        <div class="mx-auto" style="margin-top: 50px">
+        <div class="mx-auto" style="margin-top: 50px; margin-bottom:20px;">
             <div class="card about mx-auto fade-in slide-in-less"
                 style="max-width: 30rem">
                 <img src="images/RohanArni_Headshot.jpeg"
