--- a/background.html
+++ b/background.html
@@ -72,7 +72,7 @@
         </nav>
 
         <div class="d-flex mb-3"
-            style="min-height: 20vh; padding: 5px; margin-top: 50px;">
+            style="min-height: 20vh; padding: 5px; margin-top: 50px; margin-bottom:20px">
             <div class="card border-primary mx-auto slide-in-less fade-in"
                 style="max-width: 55rem;">
                 <div class="card-header"> <h3
