--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       </div>
 
-      <div class="d-flex mb-0" style="min-height: 20vh; padding: 5px;">
+      <div class="d-flex mb-0" style="min-height: 20vh; padding: 5px; margin-bottom:20px">
         <div class="card border-primary mx-auto slide-in-less fade-in" style="max-width: 55rem;">
           <div class="card-header"> <h3
               style="text-align :center">Abstract</h2></div>
