--- a/procedure.html
+++ b/procedure.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="d-flex mb-0"
-            style="min-height: 20vh; padding: 5px; margin-top: 50px">
+            style="min-height: 20vh; padding: 5px; margin-top: 50px; margin-bottom:20px">
             <div class="card border-primary mx-auto fade-in slide-in-less"
                 style="width: 55rem;">
 
