--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
             <footer
                 class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <p class="col-md-4 mb-0 text-body-secondary">&copy; Rohan Arni
-                    2024</p>
+                    2024. Icons from FontAwesome.</p>
 
                 <!-- Back to Top Button -->
                 <a href="#" id="back-to-top" class="btn btn-primary">
