graph for results page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="procedure.html">Procedure</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Results</a>
+              <a class="nav-link" href="results.html">Results</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Conclusion</a>
