--- a/procedure.html
+++ b/procedure.html
@@ -66,7 +66,7 @@
                                     href="procedure.html">Procedure</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Results</a>
+                                <a class="nav-link" href="results.html">Results</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Conclusion</a>
